refactor: Add db configurations
add azure db config
add sequelize connection to db
add api routes files

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -7,11 +7,33 @@
 @import 'tailwindcss/utilities';
 
 :root {
-    --mainbg: #E5E5E5;
+    --background: #ffffff;
+    --text: #000000;
+    --border: #FB8500;
     --orange: #FB8500;
     --light-orange: #FFB703;
-    --white: #FFFFFF;
-    --black: #000000;
+    --dark-green: #023047;
+    --green: #219EBC;
+    --light-green: #8ECAE6;
+}
+
+.dark {
+    --background: #1d1d1d;
+    --text: #e4e4e4;
+    --border: #FB8500;
+    --orange: #FB8500;
+    --light-orange: #FFB703;
+    --dark-green: #023047;
+    --green: #219EBC;
+    --light-green: #8ECAE6;
+}
+
+.light {
+    --background: #ffffff;
+    --text: #000000;
+    --border: #FB8500;
+    --orange: #FB8500;
+    --light-orange: #FFB703;
     --dark-green: #023047;
     --green: #219EBC;
     --light-green: #8ECAE6;
